// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CashinInSuccess renders correctly with a provider 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
      "overflow": "hidden",
      "padding": 32,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": 16,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        {
          "testUri": "../../../packages/runtime/src/images/assets/fiat-exchange.png",
        }
      }
    />
    <Text
      style={
        {
          "fontFamily": "Inter-Medium",
          "fontSize": 18,
          "lineHeight": 28,
          "paddingBottom": 16,
          "paddingTop": 8,
        }
      }
    >
      cicoSuccess.title
    </Text>
    <Text
      style={
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 24,
          "textAlign": "center",
        }
      }
    >
      cicoSuccess.bodyWithProvider, {"provider":"Moonpay"}
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "alignSelf": "stretch",
            "flex": 1,
            "flexDirection": "column",
            "minWidth": 200,
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "borderRadius": 100,
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            {
              "attribute": "selectableItemBackground",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#2E3338",
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "minWidth": 120,
                "opacity": 1,
                "paddingHorizontal": 24,
                "paddingVertical": 5,
              },
              undefined,
            ]
          }
          testID="SuccessContinue"
        >
          <Text
            accessibilityLabel="continue"
            maxFontSizeMultiplier={1}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 24,
                "marginLeft": 0,
                "marginRight": 0,
              }
            }
          >
            continue
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`CashinInSuccess renders correctly without a provider 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
      "overflow": "hidden",
      "padding": 32,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": 16,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        {
          "testUri": "../../../packages/runtime/src/images/assets/fiat-exchange.png",
        }
      }
    />
    <Text
      style={
        {
          "fontFamily": "Inter-Medium",
          "fontSize": 18,
          "lineHeight": 28,
          "paddingBottom": 16,
          "paddingTop": 8,
        }
      }
    >
      cicoSuccess.title
    </Text>
    <Text
      style={
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 24,
          "textAlign": "center",
        }
      }
    >
      cicoSuccess.bodyWithoutProvider
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "alignSelf": "stretch",
            "flex": 1,
            "flexDirection": "column",
            "minWidth": 200,
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "borderRadius": 100,
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            {
              "attribute": "selectableItemBackground",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#2E3338",
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "minWidth": 120,
                "opacity": 1,
                "paddingHorizontal": 24,
                "paddingVertical": 5,
              },
              undefined,
            ]
          }
          testID="SuccessContinue"
        >
          <Text
            accessibilityLabel="continue"
            maxFontSizeMultiplier={1}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 24,
                "marginLeft": 0,
                "marginRight": 0,
              }
            }
          >
            continue
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
